[#64680394] reworked UI for showing attachments

--- a/app/assets/stylesheets/common.css.scss
+++ b/app/assets/stylesheets/common.css.scss
@@ -265,6 +265,11 @@ table.attributes {
   background-image: url(/assets/show.png)
 }
 
+.small_show_button {
+  @extend .any_small_button;
+  background-image: url(/assets/show_small.png);
+}
+
 .delete_button {
   @extend .any_form_button;
   background-image: url(/assets/delete.png)
