[#64680394] added delete attachment behavior to single page

--- a/app/assets/stylesheets/single_page.css.scss
+++ b/app/assets/stylesheets/single_page.css.scss
@@ -189,6 +189,7 @@ input.number_field, input.date_field {
 
 .attachment_container {
   position: absolute;
+  margin-left: -15em;
   padding: .5em;
   border: 1px solid $black;
   border-radius: .5em;
