[#68929500] misc clean up in 'add commodity' feature, added Commodities to the primary nav

--- a/app/views/entities/_navigation.html.haml
+++ b/app/views/entities/_navigation.html.haml
@@ -1,5 +1,6 @@
 %ul#nav_2
   %li= link_to 'Accounts', entity_accounts_path(current_entity)
   %li= link_to 'Transactions', entity_transactions_path(current_entity)
+  %li= link_to 'Commodities', entity_commodities_path(current_entity)
   %li= link_to 'Budgets', entity_budgets_path(current_entity)
   %li= link_to 'Reports', reports_entity_path(current_entity)
