--- a/app/views/commodities/index.html.haml
+++ b/app/views/commodities/index.html.haml
@@ -6,14 +6,16 @@
     %th Symbol
     %th Market
     %th Most recent price
-    %th &nbsp;
+    %th.action_cell &nbsp;
   -@commodities.each do |commodity|
     %tr
       %td= commodity.name
       %td= commodity.symbol
       %td= commodity.market
       %td &nbsp;
-      %td= link_to 'Edit', edit_commodity_path(commodity), class: 'small_edit_button', title: 'Click here to edit the commodity.'
+      %td.action_cell
+        =link_to 'Edit', edit_commodity_path(commodity), class: 'edit_button', title: 'Click here to edit the commodity.'
+        =render 'shared/delete_form', resource: commodity, url: commodity_url(commodity)
 .actions
   =link_to 'Add', new_entity_commodity_path(@entity), class: 'add_button', title: 'Click here to add a new commodity.'
   =link_to 'Back', entities_path, class: 'back_button', title: 'Click here to return to the list of entities.'
