[finished #68924434] added 'delete price' feature and made it pass

--- a/app/assets/stylesheets/common.css.scss
+++ b/app/assets/stylesheets/common.css.scss
@@ -305,6 +305,11 @@ table.attributes {
   background-image: url(/assets/add_attachment_small.png);
 }
 
+.prices_button {
+  @extend .any_button;
+  background-image: url(/assets/prices.png);
+}
+
 .standard_button {
   background-color: $white;
   border: 3px solid $dark-grey;
