--- a/app/views/accounts/_form_fields.html.haml
+++ b/app/views/accounts/_form_fields.html.haml
@@ -1,7 +1,11 @@
 %div
   =f.label :account_type
   %br
-  =f.select :account_type, options_for_select(%w(asset liability equity income expense), account.account_type), :autofocus => true
+  =f.select :account_type, options_for_select(Account::ACCOUNT_TYPES, account.account_type), :autofocus => true
+%div
+  =f.label :content_type
+  %br
+  =f.select :content_type, options_for_select(Account::CONTENT_TYPES, account.content_type)
 %div
   =f.label :parent_id
   %br
