--- a/app/views/holdings/index.html.haml
+++ b/app/views/holdings/index.html.haml
@@ -19,4 +19,4 @@
     %td= format_currency(@total_current_value + @account.balance)
 .actions
   =link_to 'Add', new_purchase_account_path(@account), class: 'add_button', title: 'Click here to purchase shares of a commodity.'
-
+  =link_to 'Back', entity_accounts_path(@account.entity), class: 'back_button', title: 'Click here to return to the list of accounts.'
