[#70546388] corrected form_tag for creating purchases

--- a/app/views/accounts/new_purchase.html.haml
+++ b/app/views/accounts/new_purchase.html.haml
@@ -1,6 +1,6 @@
 %h2#page_title New commodity transaction
 
-=form_tag(url: create_purchase_account_path(@account), method: :post) do
+=form_tag(create_purchase_account_path(@account), method: :post) do
   %div
     =label_tag :transaction_date
     %br
