[#70546388] autofocus on trade date field in new price form

--- a/app/views/prices/_form_fields.html.haml
+++ b/app/views/prices/_form_fields.html.haml
@@ -1,7 +1,7 @@
 %div
   =f.label :trade_date
   %br
-  =f.text_field :trade_date, {class: 'date_field'}
+  =f.text_field :trade_date, class: 'date_field', autofocus: true
 %div
   =f.label :price
   %br
