--- a/app/views/holdings/index.html.haml
+++ b/app/views/holdings/index.html.haml
@@ -4,19 +4,29 @@
   %tr
     %th Symbol
     %th.number_column Value
+    %th.number_column Cost
+    %th.number_column Gain/Loss
   -@holdings.each do |holding|
     %tr
       %td= holding.commodity.symbol
       %td.number_column= format_currency(holding.current_value)
+      %td.number_column= format_currency(holding.cost)
+      %td.number_column= format_currency(holding.gain_loss)
   %tr
     %td Commodity total
     %td.number_column= format_currency(@total_current_value)
+    %td &nbsp;
+    %td &nbsp;
   %tr
     %td Cash
     %td.number_column= format_currency(@account.balance)
+    %td &nbsp;
+    %td &nbsp;
   %tr
     %td Total value
     %td.number_column= format_currency(@total_current_value + @account.balance)
+    %td.number_column= format_currency(@holdings.total_cost)
+    %td.number_column= format_currency(@holdings.total_gain_loss)
 .actions
   =link_to 'Add', new_purchase_account_path(@account), class: 'add_button', title: 'Click here to purchase shares of a commodity.'
   =link_to 'Back', entity_accounts_path(@account.entity), class: 'back_button', title: 'Click here to return to the list of accounts.'
