--- a/app/assets/stylesheets/holdings.css.scss
+++ b/app/assets/stylesheets/holdings.css.scss
@@ -1,3 +1,20 @@
 // Place all the styles related to the Holdings controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.total_line {
+  font-weight: bold;
+}
+
+.commodity_total_line {
+  @extend .total_line;
+}
+
+.account_total_line {
+  @extend .total_line;
+}
+
+tr.commodity_total_line td,
+tr.account_total_line td {
+  border-top: 1px solid #000;
+}
