--- a/app/views/holdings/index.html.haml
+++ b/app/views/holdings/index.html.haml
@@ -1,4 +1,6 @@
 %h2#page_title #{h @account.name} Holdings
+%ul#nav_3
+  %li= link_to 'Transactions', account_transaction_items_path(@account), title: 'Click here to view transaction items for this account.'
 
 %table#holdings_table.list{ cellspacing: 0, cellpadding: 0}
   %tr
