[#75774016] added initial styling for the commodities account menu

--- a/app/assets/stylesheets/single_page.css.scss
+++ b/app/assets/stylesheets/single_page.css.scss
@@ -82,6 +82,14 @@ table.nested_table {
   cursor:pointer;
 }
 
+#commodities_menu {
+  li {
+    font-size: 80%;
+    margin-right: 1em;
+    margin-bottom: 1em;
+  }
+}
+
 #transactions {
   margin: {
     left: 1em;
