--- a/app/views/pages/app.html.haml
+++ b/app/views/pages/app.html.haml
@@ -32,9 +32,10 @@
       %span.ui-icon.ui-icon-close{ role: 'presentation', data: { bind: "click: undisplay" }} Remove Tab
   <!-- ko foreach: displayedAccounts -->
   %div{ data: { bind: "attr: {id: 'account_' + id() }" }}
-    %ul.commodities_menu{ data: { bind: "visible: commoditiesMenuVisible" }}
-      %li{ data: { bind: "click: showTransactionItems" }} Show Transactions
-      %li{ data: { bind: "click: showHoldings" }} Show Holdings
+    %nav{ role: 'navigation' }
+      %ul.nav#commodities_menu{ data: { bind: "visible: commoditiesMenuVisible" }}
+        %li.clickable{ data: { bind: "click: showTransactionItems" }} Show Transactions
+        %li.clickable{ data: { bind: "click: showHoldings" }} Show Holdings
     %table{ cellspacing: 0, cellpadding: 0, data: { bind: "visible: holdingsVisible, attr: {id: 'holdings_' + id()}" }}
       %tr
         %th Holdings will go here
