--- a/app/views/pages/app.html.haml
+++ b/app/views/pages/app.html.haml
@@ -38,7 +38,15 @@
         %li.clickable{ data: { bind: "click: showHoldings" }} Show Holdings
     %table{ cellspacing: 0, cellpadding: 0, data: { bind: "visible: holdingsVisible, attr: {id: 'holdings_' + id()}" }}
       %tr
-        %th Holdings will go here
+        %th Symbol
+        %th Value
+        %th Shares
+        %th Cost
+        %th Gain/loss
+      <!-- ko foreach: holdings -->
+      %tr
+        %td{ data: { bind: "text: symbol" }}
+      <!-- /ko -->
     %table.register{ cellspacing: 0, cellpadding: 0, data: { bind: "visible: transactionItemsVisible, attr: {id: 'transactions_' + id() }" }}
       %tr
         %th.number_column Date
